tests/error/type_errors/while_not_bool.err
Error: Not truthy (at $FILE:12:10)
   | 
10 | @guppy(module)
11 | def foo(x: NonBool) -> int:
12 |     while x:
   |           ^ Expression of type `NonBool` is not truthy

Help: Implement missing method: `__bool__: NonBool -> bool`

Guppy compilation failed due to 1 previous error
